# pottcpp-rust-vortrag

./: Cargo.toml  README.md
benches/: map.rs
slides/: ergebnisse.txt
slides/futures/: futures.md  futures1.md  futures2.md  futures3.md
slides/ownership/: ownership.md  ownership2.md  ownership3.md  ownership4.md  ownership5.md  ownership6.md  ownership7.md
slides/ownership/plain/: ownership.md  ownership2.md  ownership3.md  ownership4.md  ownership5.md  ownership6.md  ownership7.md  ownership8.md
slides/sync/: sync1.md  sync2.md  sync3.md  sync4.md  sync5.md  sync6.md
src/: map.rs  pmap1.rs  pmap2.rs  pmap3.rs  pmap4.rs  pmap5.rs  testdata.rs
